Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#8431 closed bug (fixed)

Screen preflet crashes when opening

Reported by: DaaT Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/Screen Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Using hrev43901, whenever I try to open the screen preflet it simply crashes. I'm attaching a photo I took with the bt result.

Attachments (1)

IMG_20120330_170606.jpg (3.0 MB ) - added by DaaT 13 years ago.

Change History (6)

by DaaT, 13 years ago

Attachment: IMG_20120330_170606.jpg added

comment:1 by anevilyak, 13 years ago

Owner: changed from axeld to anevilyak
Status: newassigned
Version: R1/alpha3R1/Development

There are two problems occurring here:

1) In the case of a fixed refresh rate, the way in which the resolution string is formatted is inconsistent with the way it's generated when searching for it in _UpdateRefreshControl(). This results in us potentially failing to find that item if the refresh rate is not an even integral one, and leads to:

2) The handling of the "Other" refresh rate item needs to be reworked. In the above fixed refresh case, this item is not constructed at all, and the member pointer for it is left uninitialized.

Will deal with this over the weekend unless someone wants to beat me to it.

comment:2 by umccullough, 13 years ago

Coverity also reports a few CIDs for the screen preferences (for those with access to view them):

comment:3 by anevilyak, 13 years ago

Status: assignedin-progress

comment:4 by anevilyak, 13 years ago

Resolution: fixed
Status: in-progressclosed

Should be fixed in hrev43907.

comment:5 by anevilyak, 13 years ago

Fixed another problem in hrev43923.

Note: See TracTickets for help on using tickets.