Fix several issues in Screen preflet.

- Always initialize other menu item data member.
- Always use refresh_rate_to_string() to generate item labels.
- When searching for the item matching the selected refresh rate,
  look for it by the actual refresh rate stored in the item's message
  rather than by string comparisons of the label.
- Don't assume the Other menu item exists, since it doesn't in cases
  where the refresh rate constraints only allow a single rate.
- Update copyright year.

Fixes #8431.